# Normal C++ source files
SET(QSYS_SRCS
DispCacheRenderer.cpp
DispListRenderer.cpp
SceneManager.cpp
Scene.cpp
View.cpp
Camera.cpp
Object.cpp
Renderer.cpp
RendererFactory.cpp
StreamManager.cpp
ObjReader.cpp
ObjWriter.cpp
SysConfig.cpp
UndoManager.cpp
ObjLoadEditInfo.cpp
SceneXMLReader.cpp
SceneXMLWriter.cpp
InDevEvent.cpp
ObjectEvent.cpp
RendererEvent.cpp
SceneEvent.cpp
ViewEvent.cpp
ScalarObject.cpp
ScrEventManager.cpp
InOutHandler.cpp
QdfStream.cpp
QdfAbsReader.cpp
ViewInputConfig.cpp
PropEditInfo.cpp
style/StyleMgr.cpp
style/StyleMgrStyleImpl.cpp
style/StyleSet.cpp
style/StyleSheet.cpp
style/StyleFile.cpp
style/StyleEditInfo.cpp
style/StyleColor.cpp
style/StyleStrData.cpp
style/StyleSupports.cpp
anim/AnimMgr.cpp
anim/AnimObj.cpp
anim/AnimObjEvent.cpp
qsys.cpp
SceneExporter.cpp
RendGroup.cpp
MultiGradient.cpp
TTYView.cpp
QdfAbsWriter.cpp
command/Command.cpp
command/NewSceneCommand.cpp
command/NewRendererCommand.cpp
command/LoadSceneCommand.cpp
command/LoadObjectCommand.cpp
command/CmdMgr.cpp
)

# Normal C++ header files
SET(QSYS_HDRS
Camera.hpp
CameraEditInfo.hpp
DispCacheRenderer.hpp
DispListRenderer.hpp
DrawObj.hpp
EditInfo.hpp
IOThread.hpp
InDevEvent.hpp
InOutHandler.hpp
MomentumScroll.hpp
MultiGradient.hpp
ObjExtData.hpp
ObjLoadEditInfo.hpp
ObjReader.hpp
ObjWriter.hpp
Object.hpp
ObjectEvent.hpp
PropEditInfo.hpp
QdfAbsReader.hpp
QdfAbsWriter.hpp
QdfStream.hpp
QsysEvent.hpp
RendGroup.hpp
Renderer.hpp
RendererEvent.hpp
RendererFactory.hpp
ScalarObject.hpp
Scene.hpp
SceneEvent.hpp
SceneEventCaster.hpp
SceneExporter.hpp
SceneManager.hpp
SceneXMLReader.hpp
SceneXMLWriter.hpp
ScrEventManager.hpp
StreamManager.hpp
SysConfig.hpp
TTYView.hpp
TestRenderer.hpp
UndoManager.hpp
View.hpp
ViewCap.hpp
ViewEvent.hpp
ViewInputConfig.hpp
anim/AnimMgr.hpp
anim/AnimObj.hpp
anim/AnimObjEvent.hpp
anim/PropAnim.hpp
command/CmdMgr.hpp
command/Command.hpp
command/LoadObjectCommand.hpp
command/LoadSceneCommand.hpp
command/NewRendererCommand.hpp
command/NewSceneCommand.hpp
qsys.hpp
style/AutoStyleCtxt.hpp
style/StyleEditInfo.hpp
style/StyleFile.hpp
style/StyleMgr.hpp
style/StyleSet.hpp
style/StyleSheet.hpp
style/StyleSupports.hpp
)

# CueMol interface definitions for MCWRAPGEN
SET(QSYS_MCWG_QIFS
Renderer.qif
Scene.qif
SceneManager.qif
StreamManager.qif
View.qif
Object.qif
Camera.qif
SceneXMLReader.qif
SceneXMLWriter.qif
ObjReader.qif
ObjWriter.qif
ScrEventManager.qif
InOutHandler.qif
DrawObj.qif
style/StyleManager.qif
style/StyleSet.qif
ViewInputConfig.qif
anim/AnimMgr.qif
anim/AnimObj.qif
SceneExporter.qif
RendGroup.qif
MultiGradient.qif
ScalarObject.qif
command/Command.qif
command/NewSceneCommand.qif
command/NewRendererCommand.qif
command/LoadSceneCommand.qif
command/LoadObjectCommand.qif
command/CmdMgr.qif
)

# module loader generated by MCWG
SET(QSYS_MODLDR_SRC qsys.moddef)

MCWRAPGEN_CLASS(QSYS_SRCS ${QSYS_MCWG_QIFS})
MCWRAPGEN_MODULE(QSYS_SRCS ${QSYS_MODLDR_SRC} ${QSYS_MCWG_QIFS})

##########

add_library(qsys SHARED)

target_sources(qsys
  PRIVATE ${QSYS_SRCS} ${MCWG_HEADERS}
  PUBLIC FILE_SET HEADERS 
  BASE_DIRS ${PROJECT_SOURCE_DIR}/src
  FILES ${QSYS_HDRS}
)

target_include_directories(
  qsys PRIVATE
  ${CMAKE_SOURCE_DIR}/src
  ${CMAKE_CURRENT_SOURCE_DIR}
  ${CMAKE_CURRENT_BINARY_DIR}
  ${CMAKE_BINARY_DIR}/src
  ${Boost_INCLUDE_DIRS}
)

if (WIN32)
  # add_definitions(-DQSYS_EXPORTS=1)
  target_compile_definitions(qsys PUBLIC QSYS_EXPORTS=1)
endif()
# add_definitions(-DNO_SCRIPT=1)
target_compile_definitions(qsys PUBLIC NO_SCRIPT=1)

target_link_libraries(qsys PRIVATE qlib gfx Boost::filesystem Boost::thread)

MCWRAPGEN_PYWRAPPERS(qsys)

install(TARGETS qsys
  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
  FILE_SET HEADERS
)
