######################################################
#
# $Id: Makefile.am,v 1.54 2011/04/30 10:20:32 rishitani Exp $
#

######################################################
# C++ mcinfo generation rule

include $(top_srcdir)/mcwgen.am

######################################################

# Common C++ source files
BASE_SRC = \
DispListRenderer.cpp \
SceneManager.cpp \
Scene.cpp \
View.cpp \
Camera.cpp \
Object.cpp \
Renderer.cpp \
RendererFactory.cpp \
StreamManager.cpp \
ObjReader.cpp \
ObjWriter.cpp \
SysConfig.cpp \
UndoManager.cpp \
ObjLoadEditInfo.cpp \
SceneXMLReader.cpp \
SceneXMLWriter.cpp \
InDevEvent.cpp \
ObjectEvent.cpp \
RendererEvent.cpp \
SceneEvent.cpp \
ViewEvent.cpp \
ScalarObject.cpp \
ScrEventManager.cpp \
InOutHandler.cpp \
QdfStream.cpp \
QdfAbsReader.cpp \
ViewInputConfig.cpp \
PropEditInfo.cpp \
style/StyleMgr.cpp \
style/StyleMgrStyleImpl.cpp \
style/StyleSet.cpp \
style/StyleSheet.cpp \
style/StyleFile.cpp \
style/StyleEditInfo.cpp \
style/StyleColor.cpp \
style/StyleStrData.cpp \
anim/AnimMgr.cpp \
anim/AnimObj.cpp \
anim/AnimObjEvent.cpp \
qsys.cpp \
SceneExporter.cpp \
RendGroup.cpp \
$(NULL)

# CueMol interface definitions for MCWRAPGEN
BASE_MCWG_SRC= \
Renderer.qif \
Scene.qif \
SceneManager.qif \
StreamManager.qif \
View.qif \
Object.qif \
Camera.qif \
SceneXMLReader.qif \
SceneXMLWriter.qif \
ObjReader.qif \
ObjWriter.qif \
ScrEventManager.qif \
InOutHandler.qif \
DrawObj.qif \
style/StyleManager.qif \
style/StyleSet.qif \
ViewInputConfig.qif \
anim/AnimMgr.qif \
anim/AnimObj.qif \
SceneExporter.qif \
RendGroup.qif \
$(NULL)

# Editor (desktop ver) C++ source files

if COND_BUILD_LW
# no impl in lightweight version
EDITOR_SRC =
EDITOR_MCWG_SRC=
else

EDITOR_SRC = \
QdfAbsWriter.cpp \
$(NULL)

EDITOR_MCWG_SRC=\
$(NULL)

endif

# C++ source/header files generated by MCWRAPGEN
MCWG_SRC = $(BASE_MCWG_SRC) $(EDITOR_MCWG_SRC)
MC_SRCS = $(MCWG_SRC:.qif=_wrap.cpp)
MC_HDRS = $(MCWG_SRC:.qif=_wrap.hpp)

# module loader generated by MCWG
MODLDR_SRC = qsys_loader.cpp 

$(MODLDR_SRC): qsys.moddef $(MCWG_SRC)

######################################################
# qsys libtool library

lib_LTLIBRARIES = libqsys.la

libqsys_la_SOURCES = \
$(MODLDR_SRC) \
$(BASE_SRC) \
$(EDITOR_SRC) \
$(MC_SRCS) \
$(NULL)

libqsys_la_CXXFLAGS = \
  @CFLAGS_VIS_HIDDEN@ \
  @CXXFLAGS_VIS_HIDDEN@ \
  -DQSYS_EXPORTS=1 \
  -I$(top_srcdir) -I$(srcdir) \
  @SCR_CPPFLAGS@ \
  @GL_CPPFLAGS@ \
  @BOOST_CPPFLAGS@ \
  $(NULL)

#  ../modules/molstr/libmolstr.la
#  ../jsbr/libjsbr.la
# -Wall

libqsys_la_LIBADD = \
  @SCR_LDADD@ \
  @GL_LIBADD@ \
  @BOOST_THREAD_LIB@ \
  @BOOST_SYSTEM_LIB@ \
  @BOOST_FILESYSTEM_LIB@ \
  ../libpng/libqmpng.la \
  ../zlib/libqmzlib.la \
 $(NULL)


libqsys_la_LDFLAGS = \
  -L../gfx \
  -L../qlib \
  @SCR_LDFLAGS@ \
  @GL_LDFLAGS@ \
  @BOOST_LDFLAGS@ \
 $(NULL)

#####################################

include $(top_srcdir)/mcwgen_footer.am
